libs/config/tests/errors/ce3_duplicate_property_shadow_property/stdout.ansi
[31m[CE3] Error:[0m property was defined more than once
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:2:5[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;201mt[0m[38;5;201mh[0m[38;5;201mi[0m[38;5;201mn[0m[38;5;201mg[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m;[0m
 [38;5;240m  │[0m     [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m       [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m first defined here
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249ma[0m[38;5;249ms[0m[38;5;249ms[0m[38;5;249m [0m[38;5;155mt[0m[38;5;155mh[0m[38;5;155mi[0m[38;5;155mn[0m[38;5;155mg[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m           [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m  
 [38;5;240m  │[0m             [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m also defined here
[38;5;246m───╯[0m
